[gd_scene load_steps=6 format=4 uid="uid://gvgiv8v0wn45"]

[ext_resource type="Script" uid="uid://cpwuyuss0b1j4" path="res://arena/arena.gd" id="1_dkqtx"]
[ext_resource type="Texture2D" uid="uid://dkkw2bfneln6f" path="res://arena/assets/ground.png" id="2_dotur"]
[ext_resource type="PackedScene" uid="uid://bohkd3ilffj53" path="res://character/characters/player.tscn" id="3_dotur"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0gwdx"]
texture = ExtResource("2_dotur")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_u13ga"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0gwdx")

[node name="Arena" type="Node2D"]
script = ExtResource("1_dkqtx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(0.913725, 0.811765, 0.678431, 1)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAIAAAAAAAEAAAABAAMAAAD//wEAAAABAAEAAAD//wIAAAABAAIAAAD+/wIAAAABAAEAAAD9/wIAAAABAAMAAAD9/wEAAAABAAIAAAD+/wAAAAABAAIAAAD//wAAAAABAAMAAAABAAAAAAABAAAAAAAGAPj/AAABAAAAAAAFAPj/AAABAAIAAAAEAPj/AAABAAEAAAADAPj/AAABAAIAAAACAPj/AAABAAAAAAABAPj/AAABAAIAAAAAAPj/AAABAAMAAAD///j/AAABAAEAAAD+//j/AAABAAIAAAD9//j/AAABAAAAAAD8//j/AAABAAMAAAD7//j/AAABAAAAAAD7//f/AAABAAAAAAD6//f/AAABAAMAAAD5//f/AAABAAAAAAD5//j/AAABAAEAAAD4//j/AAABAAEAAAD3//j/AAABAAMAAAD2//j/AAABAAEAAAD4//f/AAABAAIAAAD3//f/AAABAAAAAAD2//f/AAABAAEAAAD1//f/AAABAAIAAAD1//j/AAABAAMAAAD1//n/AAABAAMAAAD1//r/AAABAAIAAAD1//v/AAABAAMAAAD1//z/AAABAAEAAAD1//3/AAABAAMAAAD1//7/AAABAAIAAAD1////AAABAAEAAAD8//f/AAABAAIAAAD9//f/AAABAAIAAAD+//f/AAABAAMAAAD///f/AAABAAMAAAAAAPf/AAABAAMAAAABAPf/AAABAAMAAAACAPf/AAABAAAAAAADAPf/AAABAAIAAAAEAPf/AAABAAMAAAAFAPf/AAABAAEAAAAGAPf/AAABAAIAAAAHAPf/AAABAAMAAAAIAPf/AAABAAEAAAD3/wgAAAABAAMAAAD2/wgAAAABAAIAAAD1/wgAAAABAAIAAAD1/wcAAAABAAIAAAD1/wYAAAABAAEAAAD1/wUAAAABAAIAAAD1/wQAAAABAAMAAAD1/wMAAAABAAEAAAD1/wIAAAABAAAAAAD1/wEAAAABAAIAAAD1/wAAAAABAAEAAAAJAPf/AAABAAMAAAAKAPf/AAABAAIAAAALAPf/AAABAAAAAAAMAPf/AAABAAMAAAANAPf/AAABAAAAAAAOAPf/AAABAAMAAAAOAPj/AAABAAIAAAAOAPn/AAABAAIAAAAOAPr/AAABAAAAAAAOAPv/AAABAAIAAAAOAPz/AAABAAAAAAAOAP3/AAABAAEAAAAOAP7/AAABAAAAAAAOAP//AAABAAAAAAAOAAAAAAABAAAAAAAOAAEAAAABAAEAAAAOAAIAAAABAAIAAAAOAAMAAAABAAAAAAAOAAQAAAABAAMAAAAOAAUAAAABAAMAAADx/wUAAAABAAMAAADx/wYAAAABAAAAAADx/wcAAAABAAAAAADx/wgAAAABAAMAAADy/wgAAAABAAIAAADz/wgAAAABAAEAAAD0/wgAAAABAAEAAAD0//f/AAABAAEAAADz//f/AAABAAMAAADy//f/AAABAAAAAADx//f/AAABAAMAAADx//j/AAABAAAAAADx//n/AAABAAEAAADx//r/AAABAAIAAADx//v/AAABAAEAAADx//z/AAABAAMAAADx//3/AAABAAAAAADx//7/AAABAAIAAADx////AAABAAEAAADx/wAAAAABAAIAAADx/wEAAAABAAIAAADx/wIAAAABAAIAAADx/wMAAAABAAAAAADx/wQAAAABAAAAAAD4/wgAAAABAAIAAAD5/wgAAAABAAEAAAD6/wgAAAABAAEAAAD7/wgAAAABAAMAAAD8/wgAAAABAAMAAAD9/wgAAAABAAMAAAD+/wgAAAABAAEAAAD//wgAAAABAAMAAAAAAAgAAAABAAEAAAABAAgAAAABAAMAAAACAAgAAAABAAEAAAADAAgAAAABAAMAAAAEAAgAAAABAAEAAAAFAAgAAAABAAAAAAAGAAgAAAABAAEAAAAHAAgAAAABAAIAAAAIAAgAAAABAAIAAAAJAAgAAAABAAEAAAAKAAgAAAABAAMAAAALAAgAAAABAAAAAAAMAAgAAAABAAMAAAANAAgAAAABAAEAAAAOAAgAAAABAAIAAAAOAAcAAAABAAAAAAAOAAYAAAABAAIAAADz/wUAAAABAAAAAADz/wQAAAABAAMAAADz/wMAAAABAAAAAADz/wIAAAABAAEAAADz/wEAAAABAAMAAADz/wAAAAABAAAAAADz////AAABAAEAAADz//7/AAABAAIAAADz//3/AAABAAEAAADz//z/AAABAAEAAADz//v/AAABAAMAAADz//r/AAABAAIAAADz//n/AAABAAAAAADz//j/AAABAAAAAADy//j/AAABAAMAAADy//n/AAABAAAAAADy//r/AAABAAMAAADy//v/AAABAAIAAADy//z/AAABAAMAAADy//3/AAABAAMAAADy//7/AAABAAAAAADy////AAABAAAAAADy/wAAAAABAAEAAADy/wEAAAABAAMAAADy/wIAAAABAAMAAADy/wMAAAABAAIAAADy/wQAAAABAAIAAADy/wUAAAABAAMAAADy/wYAAAABAAEAAADy/wcAAAABAAMAAADz/wcAAAABAAAAAADz/wYAAAABAAMAAAD0/wYAAAABAAIAAAD0/wUAAAABAAAAAAD0/wQAAAABAAEAAAD0/wMAAAABAAAAAAD0/wIAAAABAAEAAAD0/wEAAAABAAIAAAD0/wAAAAABAAIAAAD0////AAABAAAAAAD0//7/AAABAAEAAAD0//3/AAABAAIAAAD0//z/AAABAAMAAAD0//v/AAABAAAAAAD0//r/AAABAAIAAAD0//n/AAABAAEAAAD0//j/AAABAAEAAAD0/wcAAAABAAMAAAD7/wQAAAABAAIAAAD7/wMAAAABAAEAAAD7/wIAAAABAAMAAAD7/wEAAAABAAIAAAD7/wAAAAABAAEAAAD7////AAABAAEAAAD7//7/AAABAAIAAAD7//3/AAABAAIAAAD7//z/AAABAAEAAAD7//v/AAABAAAAAAD7//r/AAABAAIAAAD7//n/AAABAAEAAAD6//n/AAABAAMAAAD6//j/AAABAAIAAAD5//n/AAABAAMAAAD4//n/AAABAAMAAAD3//n/AAABAAAAAAD2//n/AAABAAEAAAD2//r/AAABAAAAAAD2//v/AAABAAAAAAD2//z/AAABAAAAAAD2//3/AAABAAIAAAD2//7/AAABAAIAAAD2////AAABAAIAAAD2/wAAAAABAAAAAAD2/wEAAAABAAMAAAD2/wIAAAABAAAAAAD2/wMAAAABAAEAAAD2/wQAAAABAAIAAAD2/wUAAAABAAIAAAD2/wYAAAABAAMAAAD2/wcAAAABAAIAAAD3/wcAAAABAAMAAAD3/wYAAAABAAAAAAD3/wUAAAABAAIAAAD3/wQAAAABAAEAAAD3/wMAAAABAAIAAAD3/wIAAAABAAIAAAD3/wEAAAABAAEAAAD3/wAAAAABAAEAAAD3////AAABAAEAAAD3//7/AAABAAMAAAD3//3/AAABAAEAAAD3//z/AAABAAMAAAD3//v/AAABAAEAAAD3//r/AAABAAEAAAD4//r/AAABAAAAAAD4//v/AAABAAIAAAD4//z/AAABAAAAAAD4//3/AAABAAEAAAD4//7/AAABAAEAAAD4////AAABAAIAAAD4/wAAAAABAAEAAAD4/wEAAAABAAAAAAD4/wIAAAABAAEAAAD4/wMAAAABAAIAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAIAAAD4/wcAAAABAAAAAAD5/wcAAAABAAEAAAD5/wYAAAABAAEAAAD5/wUAAAABAAIAAAD5/wQAAAABAAAAAAD5/wMAAAABAAEAAAD5/wIAAAABAAIAAAD5/wEAAAABAAMAAAD5/wAAAAABAAEAAAD5////AAABAAAAAAD5//7/AAABAAIAAAD5//3/AAABAAEAAAD5//z/AAABAAAAAAD5//v/AAABAAMAAAD5//r/AAABAAAAAAD6//r/AAABAAAAAAD6//v/AAABAAAAAAD6//z/AAABAAAAAAD6//3/AAABAAEAAAD6//7/AAABAAAAAAD6////AAABAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAIAAAD6/wIAAAABAAMAAAD6/wMAAAABAAIAAAD6/wQAAAABAAAAAAD6/wUAAAABAAMAAAD6/wYAAAABAAMAAAD6/wcAAAABAAIAAAD7/wcAAAABAAIAAAD7/wYAAAABAAAAAAD7/wUAAAABAAEAAAD8/wUAAAABAAIAAAD8/wQAAAABAAAAAAD8/wMAAAABAAAAAAD8/wIAAAABAAEAAAD8/wEAAAABAAAAAAD8/wAAAAABAAAAAAD8////AAABAAMAAAD8//7/AAABAAIAAAD8//3/AAABAAMAAAD8//z/AAABAAAAAAD8//v/AAABAAIAAAD8//r/AAABAAMAAAD8//n/AAABAAMAAAD9//n/AAABAAIAAAD9//r/AAABAAIAAAD9//v/AAABAAMAAAD9//z/AAABAAEAAAD9//3/AAABAAAAAAD9//7/AAABAAMAAAD9////AAABAAAAAAD9/wAAAAABAAIAAAD+////AAABAAAAAAD+//7/AAABAAAAAAD+//3/AAABAAMAAAD+//z/AAABAAAAAAD+//v/AAABAAMAAAD+//r/AAABAAAAAAD+//n/AAABAAEAAAD///n/AAABAAMAAAD///r/AAABAAIAAAD///v/AAABAAMAAAD///z/AAABAAIAAAD///3/AAABAAAAAAD///7/AAABAAMAAAD/////AAABAAEAAAAAAP//AAABAAAAAAAAAP7/AAABAAMAAAAAAP3/AAABAAAAAAAAAPz/AAABAAEAAAAAAPv/AAABAAAAAAAAAPr/AAABAAMAAAAAAPn/AAABAAMAAAABAPn/AAABAAIAAAABAPr/AAABAAMAAAABAPv/AAABAAEAAAABAPz/AAABAAAAAAABAP3/AAABAAAAAAABAP7/AAABAAEAAAABAP//AAABAAIAAAACAP//AAABAAAAAAACAP7/AAABAAAAAAACAP3/AAABAAAAAAACAPz/AAABAAAAAAACAPv/AAABAAMAAAACAPr/AAABAAMAAAACAPn/AAABAAIAAAADAPn/AAABAAIAAAADAPr/AAABAAAAAAADAPv/AAABAAMAAAADAPz/AAABAAEAAAADAP3/AAABAAIAAAADAP7/AAABAAEAAAADAP//AAABAAAAAAADAAAAAAABAAEAAAACAAAAAAABAAIAAAACAAEAAAABAAMAAAABAAEAAAABAAIAAAABAAIAAAABAAAAAAAAAAIAAAABAAMAAAAAAAMAAAABAAEAAAD//wMAAAABAAEAAAD+/wMAAAABAAEAAAD9/wMAAAABAAMAAAD9/wQAAAABAAMAAAD9/wUAAAABAAIAAAD9/wYAAAABAAMAAAD8/wYAAAABAAEAAAD8/wcAAAABAAEAAAD9/wcAAAABAAMAAAD+/wcAAAABAAAAAAD+/wYAAAABAAEAAAD+/wUAAAABAAIAAAD+/wQAAAABAAEAAAD//wQAAAABAAMAAAD//wUAAAABAAMAAAD//wYAAAABAAIAAAD//wcAAAABAAEAAAAAAAcAAAABAAIAAAAAAAYAAAABAAAAAAAAAAUAAAABAAAAAAAAAAQAAAABAAEAAAABAAQAAAABAAAAAAABAAMAAAABAAMAAAACAAMAAAABAAMAAAACAAIAAAABAAEAAAADAAIAAAABAAMAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAEAAAAAAABAAIAAAAEAP//AAABAAIAAAAEAP7/AAABAAEAAAAEAP3/AAABAAEAAAAEAPz/AAABAAAAAAAEAPv/AAABAAMAAAAEAPr/AAABAAAAAAAEAPn/AAABAAAAAAAFAPn/AAABAAEAAAAFAPr/AAABAAMAAAAFAPv/AAABAAAAAAAFAPz/AAABAAIAAAAFAP3/AAABAAEAAAAFAP7/AAABAAMAAAAFAP//AAABAAMAAAAFAAAAAAABAAIAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAEAAIAAAABAAAAAAAEAAMAAAABAAIAAAADAAMAAAABAAMAAAADAAQAAAABAAAAAAACAAQAAAABAAIAAAACAAUAAAABAAEAAAABAAUAAAABAAIAAAABAAYAAAABAAAAAAABAAcAAAABAAIAAAACAAcAAAABAAIAAAACAAYAAAABAAMAAAADAAYAAAABAAMAAAADAAUAAAABAAEAAAAEAAUAAAABAAAAAAAEAAQAAAABAAIAAAAFAAQAAAABAAIAAAAFAAMAAAABAAEAAAAGAAMAAAABAAIAAAAGAAIAAAABAAAAAAAGAAEAAAABAAEAAAAGAAAAAAABAAEAAAAGAP//AAABAAMAAAAGAP7/AAABAAIAAAAGAP3/AAABAAIAAAAGAPz/AAABAAMAAAAGAPv/AAABAAIAAAAGAPr/AAABAAMAAAAGAPn/AAABAAIAAAAHAPn/AAABAAMAAAAHAPj/AAABAAAAAAAIAPj/AAABAAAAAAAIAPn/AAABAAMAAAAIAPr/AAABAAMAAAAHAPr/AAABAAAAAAAHAPv/AAABAAAAAAAHAPz/AAABAAAAAAAHAP3/AAABAAMAAAAHAP7/AAABAAEAAAAHAP//AAABAAIAAAAHAAAAAAABAAEAAAAHAAEAAAABAAMAAAAHAAIAAAABAAIAAAAHAAMAAAABAAAAAAAHAAQAAAABAAIAAAAGAAQAAAABAAIAAAAGAAUAAAABAAMAAAAFAAUAAAABAAIAAAAFAAYAAAABAAAAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAADAAcAAAABAAAAAAAFAAcAAAABAAAAAAAGAAcAAAABAAEAAAAGAAYAAAABAAMAAAAHAAYAAAABAAEAAAAHAAUAAAABAAAAAAAIAAUAAAABAAEAAAAIAAQAAAABAAIAAAAIAAMAAAABAAIAAAAIAAIAAAABAAMAAAAIAAEAAAABAAEAAAAIAAAAAAABAAMAAAAIAP//AAABAAMAAAAIAP7/AAABAAMAAAAIAP3/AAABAAEAAAAIAPz/AAABAAIAAAAIAPv/AAABAAIAAAAJAPv/AAABAAEAAAAJAPr/AAABAAMAAAAJAPn/AAABAAMAAAAJAPj/AAABAAAAAAAKAPj/AAABAAAAAAAKAPn/AAABAAIAAAAKAPr/AAABAAMAAAAKAPv/AAABAAAAAAAKAPz/AAABAAEAAAAJAPz/AAABAAMAAAAJAP3/AAABAAIAAAAJAP7/AAABAAAAAAAJAP//AAABAAIAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAIAAAAJAAMAAAABAAEAAAAJAAQAAAABAAMAAAAJAAUAAAABAAIAAAAJAAYAAAABAAEAAAAIAAYAAAABAAIAAAAIAAcAAAABAAAAAAAHAAcAAAABAAMAAAAJAAcAAAABAAEAAAAKAAcAAAABAAIAAAAKAAYAAAABAAMAAAAKAAUAAAABAAAAAAAKAAQAAAABAAAAAAAKAAMAAAABAAIAAAAKAAIAAAABAAAAAAAKAAEAAAABAAAAAAAKAAAAAAABAAAAAAAKAP//AAABAAAAAAAKAP7/AAABAAAAAAAKAP3/AAABAAAAAAALAP3/AAABAAMAAAALAPz/AAABAAEAAAALAPv/AAABAAAAAAALAPr/AAABAAIAAAALAPn/AAABAAAAAAALAPj/AAABAAAAAAAMAPj/AAABAAMAAAAMAPn/AAABAAIAAAAMAPr/AAABAAAAAAAMAPv/AAABAAMAAAAMAPz/AAABAAAAAAAMAP3/AAABAAAAAAAMAP7/AAABAAMAAAALAP7/AAABAAEAAAALAP//AAABAAEAAAALAAAAAAABAAAAAAALAAEAAAABAAAAAAALAAIAAAABAAAAAAALAAMAAAABAAIAAAALAAQAAAABAAIAAAALAAUAAAABAAMAAAALAAYAAAABAAMAAAALAAcAAAABAAAAAAAMAAcAAAABAAAAAAAMAAYAAAABAAEAAAAMAAUAAAABAAEAAAAMAAQAAAABAAAAAAAMAAMAAAABAAMAAAAMAAIAAAABAAEAAAAMAAEAAAABAAMAAAAMAAAAAAABAAIAAAAMAP//AAABAAAAAAANAP//AAABAAMAAAANAP7/AAABAAEAAAANAP3/AAABAAIAAAANAPz/AAABAAEAAAANAPv/AAABAAIAAAANAPr/AAABAAIAAAANAPn/AAABAAMAAAANAPj/AAABAAMAAAANAAAAAAABAAAAAAANAAEAAAABAAMAAAANAAIAAAABAAIAAAANAAMAAAABAAEAAAANAAQAAAABAAAAAAANAAUAAAABAAMAAAANAAYAAAABAAIAAAANAAcAAAABAAEAAAD+/wEAAAABAAAAAAAPAAkAAAAAAAEAAAAOAAkAAAAAAAMAAAANAAkAAAAAAAEAAAAMAAkAAAAAAAMAAAALAAkAAAAAAAIAAAAKAAkAAAAAAAIAAAAJAAkAAAAAAAMAAAAIAAkAAAAAAAMAAAAHAAkAAAAAAAMAAAAGAAkAAAAAAAIAAAAFAAkAAAAAAAIAAAAPAAgAAAAAAAIAAAAPAAcAAAAAAAEAAAAPAAYAAAAAAAMAAAAPAAUAAAAAAAIAAAAPAAQAAAAAAAEAAAAPAAMAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAEAAAAAAAEAAAAPAAAAAAAAAAIAAAAPAP//AAAAAAMAAAAEAAkAAAAAAAEAAAADAAkAAAAAAAEAAAACAAkAAAAAAAIAAAABAAkAAAAAAAMAAAAAAAkAAAAAAAMAAAD//wkAAAAAAAIAAAD+/wkAAAAAAAEAAAD9/wkAAAAAAAIAAAD8/wkAAAAAAAIAAAD7/wkAAAAAAAMAAAD6/wkAAAAAAAMAAAD5/wkAAAAAAAEAAAD4/wkAAAAAAAEAAAD3/wkAAAAAAAEAAAD2/wkAAAAAAAIAAAD1/wkAAAAAAAMAAAD0/wkAAAAAAAEAAADz/wkAAAAAAAMAAADy/wkAAAAAAAIAAADx/wkAAAAAAAMAAADw/wkAAAAAAAMAAADw/wgAAAAAAAMAAADw/wcAAAAAAAIAAADw/wYAAAAAAAMAAADw/wUAAAAAAAIAAADw/wQAAAAAAAEAAADw/wMAAAAAAAMAAADw/wIAAAAAAAMAAADw//b/AAAAAAEAAADw//f/AAAAAAMAAADw//j/AAAAAAMAAADw//n/AAAAAAMAAADw//r/AAAAAAEAAADw//v/AAAAAAEAAADw//z/AAAAAAMAAADw//3/AAAAAAIAAADw//7/AAAAAAMAAADw////AAAAAAEAAADw/wAAAAAAAAMAAADw/wEAAAAAAAEAAADx//b/AAAAAAIAAADy//b/AAAAAAMAAADz//b/AAAAAAIAAAD0//b/AAAAAAEAAAD1//b/AAAAAAEAAAD2//b/AAAAAAMAAAD3//b/AAAAAAEAAAD4//b/AAAAAAEAAAD5//b/AAAAAAIAAAD6//b/AAAAAAMAAAD7//b/AAAAAAMAAAD8//b/AAAAAAMAAAD9//b/AAAAAAIAAAD+//b/AAAAAAEAAAD///b/AAAAAAEAAAAAAPb/AAAAAAEAAAABAPb/AAAAAAEAAAACAPb/AAAAAAMAAAADAPb/AAAAAAIAAAAEAPb/AAAAAAIAAAAFAPb/AAAAAAEAAAAGAPb/AAAAAAMAAAAHAPb/AAAAAAEAAAAIAPb/AAAAAAIAAAAJAPb/AAAAAAEAAAAKAPb/AAAAAAMAAAALAPb/AAAAAAEAAAAMAPb/AAAAAAMAAAANAPb/AAAAAAIAAAAOAPb/AAAAAAMAAAAPAPb/AAAAAAMAAAAPAPf/AAAAAAEAAAAPAPj/AAAAAAMAAAAPAPn/AAAAAAEAAAAPAPr/AAAAAAMAAAAPAPv/AAAAAAMAAAAPAPz/AAAAAAEAAAAPAP3/AAAAAAMAAAAPAP7/AAAAAAEAAAA=")
tile_set = SubResource("TileSet_u13ga")

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource("3_dotur")]

[node name="ActionSelectionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FastActionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MoveActionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SlowActionTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Timer" type="ProgressBar" parent="UI/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
max_value = 1.0
show_percentage = false
